# klok

./: .gitattributes  .gitignore  Cargo.toml  README.md  audio_pipeline.py  example_usage.py  main.py  pyproject.toml  setup.py  test_pipeline.py
analysis/: capture_voice.py  download_song.py  midi.py  pitch.py  plot_input.py  plottings.py  uc2mp3.py  vocal_separation.py
analysis/basic_pitch/: __init__.py  commandline_printing.py  constants.py  inference.py  note_creation.py
app/: .gitignore  package.json  tsconfig.json  uno.config.ts  vite.config.ts
app/src/: App.vue  main.ts  metadata.d.ts  samples.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: get_metadata.rs  load_audio.rs  load_midi.rs  load_playlist.rs  mod.rs
app/src/components/: Controller.vue  Lyrics.vue  MidiView.vue  Playlist.vue
app/src/utils/: api.ts  pitch.ts  state.ts  time.ts
res/: 我的一个道姑朋友.lrc  杀破狼.lrc
