[project]
name = "klok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "demucs>=4.0.1",
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "mido>=1.3.3",
    "torch>=2.8.0",
]

[tool.uv.sources]
# https://docs.astral.sh/uv/guides/integration/pytorch/
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
